#fixed: the footer gap added in small devices

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -437,6 +437,7 @@
   .home-page .footer .footer-container{
     display: flex;
     flex-wrap: wrap;
+    gap: 40px;
     .last-one{
       width: 100%;
     }
